# go-webp

encoder/: BUILD.bazel
utils/: BUILD.bazel
webp/: BUILD.bazel
